--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="description" content="NetCoCo UI for NetCoCo Network Automation Application">
+    <meta name="keywords" content="NetCoCo, Network Automation, Network Automation Application">
+    <meta name="author" content="Chatdanai Phakaket">
+    <link rel="icon" href="<%= VUE_APP_VERSION %>/ui/favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
