--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="NetCoCo UI for NetCoCo Network Automation Application">
     <meta name="keywords" content="NetCoCo, Network Automation, Network Automation Application">
     <meta name="author" content="Chatdanai Phakaket">
-    <link rel="icon" href="<%= VUE_APP_VERSION %>/ui/favicon.ico">
+    <link rel="icon" href="/images/favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
